<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroDatos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivVerFoto"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btnTomarFoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/take_picture"
                    android:layout_gravity="center_vertical"/>

            </TableRow>

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"/>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/etBiography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="5"
                android:hint="@string/biography"/>

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>